Style fixes with some templates extending the form, expanded panels hiding submit button and template text overflowing card content and becoming not visible.

--- a/angular/src/app/material-file-uploader/material-file-uploader.component.css
+++ b/angular/src/app/material-file-uploader/material-file-uploader.component.css
@@ -18,6 +18,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 1rem;
+  overflow: hidden;
 }
 
 .drop-icon {
