--- a/angular/src/app/reporting/report-form/add-report/construct-form/construct-form.component.css
+++ b/angular/src/app/reporting/report-form/add-report/construct-form/construct-form.component.css
@@ -35,8 +35,5 @@
   margin-bottom: 20px;
 }
 
-.form-field {
-  width: 100%;
-}
 
 
