--- a/angular/src/app/reporting/report-form/add-report/export-form/export-form.component.css
+++ b/angular/src/app/reporting/report-form/add-report/export-form/export-form.component.css
@@ -1,39 +1,18 @@
-.panel-content {
+.review-container {
+  max-height: 80vh;
+  overflow-y: auto;
+  padding: 16px;
+  box-sizing: border-box;
+}
+
+.mat-card-content {
   display: flex;
   flex-direction: column;
-  margin: 10px;
 }
 
-.data-table {
-  width: 100%;
-}
-
-.expansion-panel-table {
-  margin-top: 10px;
-}
-
-.expanded-row {
-  cursor: pointer;
-  background-color: #f5f5f5;
-}
-
-.expanded-content {
-  margin-top: 10px;
-  width: 100%;
-}
-
-button {
-  margin-bottom: 10px;
-}
-
-.panel {
-  margin-bottom: 16px;
-}
-
-.expanded-content-text {
-  margin-bottom: 8px;
-  font-weight: bold;
-  font-size: 16px;
+.mat-accordion {
+  max-height: 90vh;
+  overflow-y: auto;
 }
 
 .mat-expansion-panel-content {
@@ -41,20 +20,17 @@ button {
   overflow-y: auto;
 }
 
-.expanded-query-field {
-  width: 100%;
-  height: 200px;
+button {
+  margin-bottom: 10px;
 }
 
-.expanded-query-field textarea {
-  font-family: monospace;
+.template {
+  width: 100%;
   white-space: pre-wrap;
-  word-break: break-word;
-
+  word-wrap: break-word;
+  overflow-x: auto;
 }
 
 .form-field {
-  display: block;
-  margin-bottom: 20px;
+  width: 50%;
 }
-
